--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-11 Thu 03:12 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -287,7 +287,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/leli-ideology/leli_and_islam.html">Left-liberalism weds Islam ⭐</a></li>
 <li><a href="politics/leli-ideology/totalizing.html">Left-liberals view foreign policy through an ideological, not material lens</a></li>
 <li><a href="politics/leli-ideology/liberal_ideology.html">Modern liberalism as the ideology of dehātization ⭐</a></li>
-<li><a href="politics/leli-ideology/origin.html">Origin</a></li>
+<li><a href="politics/leli-ideology/origin.html">Origin and self-conception of Left-liberalism</a></li>
 </ul></li>
 <li>leli-raj
 <ul class="org-ul">
@@ -298,10 +298,9 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="politics/leli-raj/ideologies.html">Ideologies, not nations or tribes, are the fundamental unit of our time ⭐</a></li>
 <li><a href="politics/leli-raj/sovereignty.html">Is the Indian Left uniquely treasonous? ⭐</a></li>
 <li><a href="politics/leli-raj/misc.html">Misc points</a></li>
-<li><a href="politics/leli-raj/aether.html">The Leftist Ideological Ather and Lay Leftists ⭐</a></li>
+<li><a href="politics/leli-raj/aether.html">The Leftist Ideological Aether and Lay Leftists ⭐</a></li>
 <li><a href="politics/leli-raj/libraj_strikes_back.html">The Left-liberal Rāj strikes back; the &ldquo;Woke Right&rdquo; and the Mandalization of America ⭐</a></li>
-<li><a href="politics/leli-raj/bottleneck.html">What is the main bottleneck for BJP/Indian RW?</a></li>
-<li><a href="politics/leli-raj/world_model.html">World models</a></li>
+<li><a href="politics/leli-raj/world_model.html">World models are the bottleneck for the Indian RW</a></li>
 </ul></li>
 <li>misc
 <ul class="org-ul">
@@ -334,6 +333,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <ul class="org-ul">
 <li><a href="politics/political-theory/meme-theory.html">Highly Advanced Semi-formal Meme Theory for beginners ⭐</a></li>
 <li><a href="politics/political-theory/polcomp.html">I don&rsquo;t like the political compass</a></li>
+<li><a href="politics/political-theory/propaganda.html">Lying</a></li>
 <li><a href="politics/political-theory/conspiracy_theories.html">Taxonomy of Conspiracy Theories ⭐</a></li>
 </ul></li>
 <li>rhetorical-advice
@@ -416,7 +416,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-11 Thu 03:12</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
