--- a/other-people/history.html
+++ b/other-people/history.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-09 Tue 20:26 -->
+<!-- 2025-09-18 Thu 16:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Snippetjeetry</title>
@@ -1334,7 +1334,7 @@ Description of water wheel by Bhaskaracharya
 <h3 id="orga6aaafb"><span class="section-number-3">13.3.</span> Mechanical devices in ancient India</h3>
 <div class="outline-text-3" id="text-13-3">
 <p>
-<p class="byline">Published on <a href="https://www.reddit.com/r/IndicKnowledgeSystems/comments/1khimi8/mechanical_devices_in_ancient_india/">Twitter</a> by <a href="https://x.com/David_Headley_2008">@David_Headley_2008</a></p>
+<p class="byline">Published on <a href="https://www.reddit.com/r/IndicKnowledgeSystems/comments/1khimi8/mechanical_devices_in_ancient_india/">Reddit</a> by <a href="https://reddit.com/user/David_Headley_2008">@David_Headley_2008</a></p>
 </p>
 
 <p>
@@ -1798,7 +1798,7 @@ Followed by this passage..
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-09 Tue 20:26</p>
+<p class="date">Created: 2025-09-18 Thu 16:32</p>
 </div>
 </body>
 </html>
