--- a/politics/agency/things_are_hard_pill.html
+++ b/politics/agency/things_are_hard_pill.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reject blackpill/whitepill. Embrace things-are-hard-pill</title>
@@ -214,6 +214,8 @@
 </ul>
 </li>
 <li><a href="#orga0e8b38">3. Challenges to a Reign of Terror</a></li>
+<li><a href="#org0589e79">4. Challenge to doing The Needful</a></li>
+<li><a href="#org89357d5">5. The Cope problem</a></li>
 </ul>
 </div>
 </div>
@@ -295,10 +297,90 @@ The model can still be used against online influenzas, and I would ike to see th
 </p>
 </div>
 </div>
+<div id="outline-container-org0589e79" class="outline-2">
+<h2 id="org0589e79"><span class="section-number-2">4.</span> Challenge to doing The Needful</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1967670690049560734">Twitter</a></p>
+</p>
+
+<p>
+No, it&rsquo;s not &ldquo;Pakistanis don&rsquo;t hate Indians that much&rdquo;. It&rsquo;s that willingness to shake hands (and much else) is not based on hatred but on indignance/feeling wronged.
+</p>
+
+<p>
+Pakistanis despise Indians but as Muslims feel wronged by Israel. This is why when we do the needful it must come from a position of overwhelming power: when Muslims <b>actually</b> feel wronged by us, the global environment will be far far more hostile to us than anything we&rsquo;ve seen.
+</p>
+
+<p>
+As things stand, we do not have the capacity (either economic/military capacity or internal political coherence) to take the sort of heat that Israel does.
+</p>
+
+<p>
+This is also why the first needful must be against Left-liberals/Cong.
+</p>
+
+<p>
+<img src="/img/doc_img/pakistan_hate.png" alt="pakistan_hate.png" />
+</p>
+</div>
+</div>
+<div id="outline-container-org89357d5" class="outline-2">
+<h2 id="org89357d5"><span class="section-number-2">5.</span> The Cope problem</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1968523122363294005">Twitter</a></p>
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/FT/status/1968385701960892543">https://x.com/FT/status/1968385701960892543</a>
+<img src="/img/doc_img/cope.png" alt="cope.png" />
+Look at the retards coping in the replies.
+</p>
+
+<p>
+&ldquo;AMERICA ORDERED PAKISTAN TO HAND OVER THEIR NUKES LOL HAHAHA&rdquo;
+</p>
+
+<p>
+&ldquo;Pakistan and Israel are on the same team!!&rdquo;
+</p>
+
+<p>
+&ldquo;MBZ (???) is using them as security guards for their goats!&rdquo;
+</p>
+</blockquote>
+
+<p>
+This country has a cope problem.
+</p>
+
+<p>
+Our people are <i>addicted</i> to feeling like they&rsquo;re winning. We reached the top of the world between the first millennium AD, and cannot let go of the high.
+</p>
+
+<p>
+A lot of the bizarrely high expectations from the government also come from this: people not knowing our <i>aukāt</i> in modern times and subconsciously still thinking we&rsquo;re at the top of the world and everyone worships us like the silk road kings begging for us to sire their grandchildren.
+</p>
+
+<p>
+So the govt has to furnish a steady stream of exaggerated Ws to keep them satiated. Because surely the great No. 1 country that we are, if something goes wrong it must be because the &ldquo;politicians&rdquo; are disappointing us.
+</p>
+
+<p>
+No, global circumstances really are dark. So dark that Pakistan does a terrorist attack on us, and <b>we&rsquo;re</b> the ones who are at risk of getting isolated (birthday wishes aside).
+</p>
+
+<p>
+We need to be weaned off this addiction. But if a Millennium of Humiliation did not rid us of it, I don&rsquo;t know what will.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
