--- a/politics/leli-ideology/cop.html
+++ b/politics/leli-ideology/cop.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Good Cop Bad Cop</title>
@@ -205,13 +205,27 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org154da17">1. mamdani</a></li>
+<li><a href="#org14f08d1">1. cops</a></li>
+<li><a href="#org154da17">2. mamdani</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org154da17" class="outline-2">
-<h2 id="org154da17"><span class="section-number-2">1.</span> mamdani</h2>
+<div id="outline-container-org14f08d1" class="outline-2">
+<h2 id="org14f08d1"><span class="section-number-2">1.</span> cops</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1940723613659025646">Twitter</a></p>
+Yes, Left has mastered the art of good-cop bad-cop to the extent that they have an entire spectrum of increasingly worse cops moving the overton window.
+</p>
+
+<p>
+Instead of understanding this līlā, the right thinks this is a &ldquo;political spectrum&rdquo;.
+</p>
+</div>
+</div>
+<div id="outline-container-org154da17" class="outline-2">
+<h2 id="org154da17"><span class="section-number-2">2.</span> mamdani</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956566602343993401">Twitter</a></p>
 </p>
@@ -224,7 +238,7 @@ The fact that CentristLibs™ aren&rsquo;t even <b>trying</b> to push a coherent
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
