--- a/politics/leli-ideology/totalizing.html
+++ b/politics/leli-ideology/totalizing.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Left-liberals view foreign policy through an ideological, not material lens</title>
@@ -207,6 +207,7 @@
 <ul>
 <li><a href="#org000a78a">1. India and Hindutva</a></li>
 <li><a href="#orgc55fa5f">2. Left-liberalism will conquer China from a ravaged America</a></li>
+<li><a href="#org6a352ec">3. Our diplomacy must be Hindutva</a></li>
 </ul>
 </div>
 </div>
@@ -278,10 +279,27 @@ The only hope is to Russia-maxx. Bunker up the country into an unassailable fort
 </p>
 </div>
 </div>
+<div id="outline-container-org6a352ec" class="outline-2">
+<h2 id="org6a352ec"><span class="section-number-2">3.</span> Our diplomacy must be Hindutva</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1964769422666781086">Twitter</a></p>
+The main problem with Indian diplomacy is that it is not Hindutva—i.e. the people who staff it do not have a rooted Indian ideology, and thus are not motivated by a genuinely-held moral belief in Indian national interests.
+</p>
+
+<p>
+And the main problem Hindutva had in reforming Indian diplomacy is it failed to understand how much ideology matters in foreign policy (and thus the importance of staffing IFS with <code>our guys</code>).
+</p>
+
+<p>
+Hindutva thought of treason as an unthinkable crime you didn&rsquo;t need to prepare for, whereas for LeLis and American dalals that is just a way of life.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
