--- a/politics/misc/dalali.html
+++ b/politics/misc/dalali.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-27 Wed 20:55 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</title>
@@ -213,6 +213,7 @@
 <li><a href="#org8cf26f7">6. We are not cozying up to China (and we shouldn&rsquo;t say we are); we&rsquo;re spanking American dalāls.</a></li>
 <li><a href="#org2c9ff80">7. Do not chimp out against either the US or China.</a></li>
 <li><a href="#orge21855f">8. TL;DR</a></li>
+<li><a href="#orgf3ec988">9. Balancing relationships vs directional movements</a></li>
 </ul>
 </div>
 </div>
@@ -345,10 +346,30 @@ Lobbying is all four: sāma-dāma-daṇḍa-bheda. Any relationship absolutely n
 </p>
 </div>
 </div>
+<div id="outline-container-orgf3ec988" class="outline-2">
+<h2 id="orgf3ec988"><span class="section-number-2">9.</span> Balancing relationships vs directional movements</h2>
+<div class="outline-text-2" id="text-9">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1968873682962719037">Twitter</a></p>
+</p>
+
+<p>
+A sneaky thing Ummah-dalals do is say &ldquo;Even GOI doesn&rsquo;t phull-sappott Israel!&rdquo;
+</p>
+
+<p>
+Nobody said the govt shouldn&rsquo;t balance relationships. The point is we should have a clear understanding of how these relationships will trend in the long run, and plan for that directionally.
+</p>
+
+<p>
+Example. Saudi signing a defense deal with Pak, something that will obviously piss us off, is <b>literally</b> a demonstration that Ummah matters more than their relationship with us. Using this to say &ldquo;see how beautiful our relationship with Iran is!&rdquo; is <b>literally brain-dead</b>, you are seeing a clear example of why we shouldn&rsquo;t expect our relationship with Iran to be so beautiful in the long run.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-27 Wed 20:55</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
