--- a/politics/policy.html
+++ b/politics/policy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-09 Tue 20:27 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Private military corporations, the Order of Glorious Motherhood and other policies I wish for</title>
@@ -205,40 +205,59 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4739dfc">1. Private military corporations</a></li>
-<li><a href="#org87a314c">2. Policy wishlist</a>
+<li><a href="#org6892625">1. Positive vision: Swayambodha, Śatrubodha, Mitrabodha</a></li>
+<li><a href="#org4739dfc">2. Private military corporations</a></li>
+<li><a href="#org87a314c">3. Policy wishlist</a>
 <ul>
-<li><a href="#org875e3be">2.1. Easy:</a></li>
-<li><a href="#org71b49af">2.2. Non-trivial:</a></li>
-<li><a href="#orge7ebe9d">2.3. Notes:</a></li>
+<li><a href="#org875e3be">3.1. Easy:</a></li>
+<li><a href="#org71b49af">3.2. Non-trivial:</a></li>
+<li><a href="#orge7ebe9d">3.3. Notes:</a></li>
 </ul>
 </li>
-<li><a href="#org50e4277">3. Pro-natal policy</a>
+<li><a href="#org50e4277">4. Pro-natal policy</a>
 <ul>
-<li><a href="#orgb6525fc">3.1. Order of Glorious Motherhood</a></li>
-<li><a href="#org0fb575b">3.2. urban infra/FSI</a></li>
-<li><a href="#orgee3bdad">3.3. solutions</a></li>
-<li><a href="#orgd2b8d4f">3.4. tax rebates</a></li>
-<li><a href="#orge8122ce">3.5. why</a></li>
-<li><a href="#org6dafc43">3.6. cultural aversion</a></li>
+<li><a href="#orgb6525fc">4.1. Order of Glorious Motherhood</a></li>
+<li><a href="#org0fb575b">4.2. urban infra/FSI</a></li>
+<li><a href="#orgee3bdad">4.3. solutions</a></li>
+<li><a href="#orgd2b8d4f">4.4. tax rebates</a></li>
+<li><a href="#orge8122ce">4.5. why</a></li>
+<li><a href="#org6dafc43">4.6. cultural aversion</a></li>
 </ul>
 </li>
-<li><a href="#orgdf9a2f1">4. Low-hanging fruits in education</a>
+<li><a href="#orgdf9a2f1">5. Low-hanging fruits in education</a>
 <ul>
-<li><a href="#org3824d3b">4.1. Spam pre-1973 books everywhere</a></li>
-<li><a href="#orgf03929c">4.2. Teach the Arthaśāstra</a></li>
+<li><a href="#org3824d3b">5.1. Spam pre-1973 books everywhere</a></li>
+<li><a href="#orgf03929c">5.2. Teach the Arthaśāstra</a></li>
 </ul>
 </li>
-<li><a href="#org3dcd2a0">5. High-speed rail map</a></li>
-<li><a href="#orgf42de29">6. Media code</a></li>
-<li><a href="#org60cc97b">7. My genius plan to replace reservations</a></li>
-<li><a href="#org5af1c4b">8. Climate control</a></li>
+<li><a href="#org3dcd2a0">6. High-speed rail map</a></li>
+<li><a href="#orgf42de29">7. Media code</a></li>
+<li><a href="#org60cc97b">8. My genius plan to replace reservations</a></li>
+<li><a href="#org5af1c4b">9. Climate control</a></li>
 </ul>
+</div>
+</div>
+<div id="outline-container-org6892625" class="outline-2">
+<h2 id="org6892625"><span class="section-number-2">1.</span> Positive vision: Swayambodha, Śatrubodha, Mitrabodha</h2>
+<div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1941464582155010165">Twitter</a></p>
+</p>
+
+<p>
+Svayambodha: Capitalism and <a href="/politics/nirnaya-pill/veto.html">Hindu sovereignty</a>
+Śatrubodha: Left-liberalism, Islam and regrettably China
+Mitrabodha: Hindu unity, Israel, Russia, Global RW/non-left unity and Non-muslim unity
+</p>
+
+<p>
+*the monroe doctrine that H should have total authority over whatever decisions are to be taken over the subcontinent without having to cater to objections from random parochial elements
+</p>
 </div>
 </div>
 <div id="outline-container-org4739dfc" class="outline-2">
-<h2 id="org4739dfc"><span class="section-number-2">1.</span> Private military corporations</h2>
-<div class="outline-text-2" id="text-1">
+<h2 id="org4739dfc"><span class="section-number-2">2.</span> Private military corporations</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1921554403284152825">Twitter</a></p>
 </p>
@@ -285,15 +304,15 @@ You just need &ldquo;good cops&rdquo; (Gulf for ISIS) covering for you. Unleash 
 </div>
 </div>
 <div id="outline-container-org87a314c" class="outline-2">
-<h2 id="org87a314c"><span class="section-number-2">2.</span> Policy wishlist</h2>
-<div class="outline-text-2" id="text-2">
+<h2 id="org87a314c"><span class="section-number-2">3.</span> Policy wishlist</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1797283475688390705">Twitter</a></p>
 </p>
 </div>
 <div id="outline-container-org875e3be" class="outline-3">
-<h3 id="org875e3be"><span class="section-number-3">2.1.</span> Easy:</h3>
-<div class="outline-text-3" id="text-2-1">
+<h3 id="org875e3be"><span class="section-number-3">3.1.</span> Easy:</h3>
+<div class="outline-text-3" id="text-3-1">
 <ul class="org-ul">
 <li>Farm bill</li>
 <li>Labor/mfg deregulation</li>
@@ -313,8 +332,8 @@ You just need &ldquo;good cops&rdquo; (Gulf for ISIS) covering for you. Unleash 
 </div>
 </div>
 <div id="outline-container-org71b49af" class="outline-3">
-<h3 id="org71b49af"><span class="section-number-3">2.2.</span> Non-trivial:</h3>
-<div class="outline-text-3" id="text-2-2">
+<h3 id="org71b49af"><span class="section-number-3">3.2.</span> Non-trivial:</h3>
+<div class="outline-text-3" id="text-3-2">
 <ul class="org-ul">
 <li>Increase Birth Rate to &gt;3.0</li>
 <li>Fix Indians&rsquo; diet/lifestyle</li>
@@ -329,8 +348,8 @@ You just need &ldquo;good cops&rdquo; (Gulf for ISIS) covering for you. Unleash 
 </div>
 </div>
 <div id="outline-container-orge7ebe9d" class="outline-3">
-<h3 id="orge7ebe9d"><span class="section-number-3">2.3.</span> Notes:</h3>
-<div class="outline-text-3" id="text-2-3">
+<h3 id="orge7ebe9d"><span class="section-number-3">3.3.</span> Notes:</h3>
+<div class="outline-text-3" id="text-3-3">
 <ul class="org-ul">
 <li>All of this is todo for 2029. There&rsquo;s much to be done once we&rsquo;re actually on track.</li>
 <li>&ldquo;End Pakistan&rdquo; is code for &ldquo;modernize the military, bring hell in retribution to every case of some shithole village persecuting Hindus&rdquo;. Actually ending Pak can wait.</li>
@@ -339,12 +358,12 @@ You just need &ldquo;good cops&rdquo; (Gulf for ISIS) covering for you. Unleash 
 </div>
 </div>
 <div id="outline-container-org50e4277" class="outline-2">
-<h2 id="org50e4277"><span class="section-number-2">3.</span> Pro-natal policy</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="org50e4277"><span class="section-number-2">4.</span> Pro-natal policy</h2>
+<div class="outline-text-2" id="text-4">
 </div>
 <div id="outline-container-orgb6525fc" class="outline-3">
-<h3 id="orgb6525fc"><span class="section-number-3">3.1.</span> Order of Glorious Motherhood</h3>
-<div class="outline-text-3" id="text-3-1">
+<h3 id="orgb6525fc"><span class="section-number-3">4.1.</span> Order of Glorious Motherhood</h3>
+<div class="outline-text-3" id="text-4-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1946124131315163499">Twitter</a></p>
 In Hindoo rāṣṭra there will be 7 towering statues of the Saptarṣi in Uttarakhand, designed by kerala sculptors, where every mother of 7 will be presented the honor by the president.
@@ -361,8 +380,8 @@ Insults against them will be punishable equivalent to blasphemy, we will name as
 </div>
 </div>
 <div id="outline-container-org0fb575b" class="outline-3">
-<h3 id="org0fb575b"><span class="section-number-3">3.2.</span> urban infra/FSI</h3>
-<div class="outline-text-3" id="text-3-2">
+<h3 id="org0fb575b"><span class="section-number-3">4.2.</span> urban infra/FSI</h3>
+<div class="outline-text-3" id="text-4-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1932282826076180978">Twitter</a></p>
 This guy is annoying, but one reason to prioritize urban infrastructure/FSI deregulation etc is to damage the &ldquo;India is overpopulated&rdquo; meme and make it easier to push pro-natalist legislation and propaganda.
@@ -374,8 +393,8 @@ This guy is annoying, but one reason to prioritize urban infrastructure/FSI dere
 </div>
 </div>
 <div id="outline-container-orgee3bdad" class="outline-3">
-<h3 id="orgee3bdad"><span class="section-number-3">3.3.</span> solutions</h3>
-<div class="outline-text-3" id="text-3-3">
+<h3 id="orgee3bdad"><span class="section-number-3">4.3.</span> solutions</h3>
+<div class="outline-text-3" id="text-4-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1961137761710473304">Twitter</a></p>
 That&rsquo;s not true. All of these work:
@@ -391,11 +410,19 @@ That&rsquo;s not true. All of these work:
 <p>
 Problem is both the left and the right use TFR to push their priorities (retarded social democratic policies on the left, religion on the right), and when that fails people say &ldquo;welp, looks like nothing can be done about TFR&rdquo;
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965813513152270581">Twitter</a></p>
+</p>
+
+<p>
+Anti-natalism is the psy-op. It must be crushed with infant simulator, Order of Glorious Motherhood, FSI deregulation, banning contraception to ages &gt;25 with insufficient children, private military corporations, pro-natalist/pro-H media policy, and tax breaks to baby BVILDers
+</p>
 </div>
 </div>
 <div id="outline-container-orgd2b8d4f" class="outline-3">
-<h3 id="orgd2b8d4f"><span class="section-number-3">3.4.</span> tax rebates</h3>
-<div class="outline-text-3" id="text-3-4">
+<h3 id="orgd2b8d4f"><span class="section-number-3">4.4.</span> tax rebates</h3>
+<div class="outline-text-3" id="text-4-4">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1805252517627826564">Twitter</a></p>
 Fertility-based income tax rebates would actually work wonders in India because it would incentivize precisely the people we want reproducing more.
@@ -417,8 +444,8 @@ Fertility-based income tax rebates would actually work wonders in India because 
 </div>
 </div>
 <div id="outline-container-orge8122ce" class="outline-3">
-<h3 id="orge8122ce"><span class="section-number-3">3.5.</span> why</h3>
-<div class="outline-text-3" id="text-3-5">
+<h3 id="orge8122ce"><span class="section-number-3">4.5.</span> why</h3>
+<div class="outline-text-3" id="text-4-5">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1961141351883665549">Twitter</a></p>
 </p>
@@ -432,8 +459,8 @@ Fertility-based income tax rebates would actually work wonders in India because 
 </div>
 </div>
 <div id="outline-container-org6dafc43" class="outline-3">
-<h3 id="org6dafc43"><span class="section-number-3">3.6.</span> cultural aversion</h3>
-<div class="outline-text-3" id="text-3-6">
+<h3 id="org6dafc43"><span class="section-number-3">4.6.</span> cultural aversion</h3>
+<div class="outline-text-3" id="text-4-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965543185850982802">Twitter</a></p>
 Low TFR, at least in India, is caused not by any socio-economic factors but by a cultural attitude that having more kids = low-class.
@@ -450,12 +477,12 @@ The reason for this is
 </div>
 </div>
 <div id="outline-container-orgdf9a2f1" class="outline-2">
-<h2 id="orgdf9a2f1"><span class="section-number-2">4.</span> Low-hanging fruits in education</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="orgdf9a2f1"><span class="section-number-2">5.</span> Low-hanging fruits in education</h2>
+<div class="outline-text-2" id="text-5">
 </div>
 <div id="outline-container-org3824d3b" class="outline-3">
-<h3 id="org3824d3b"><span class="section-number-3">4.1.</span> Spam pre-1973 books everywhere</h3>
-<div class="outline-text-3" id="text-4-1">
+<h3 id="org3824d3b"><span class="section-number-3">5.1.</span> Spam pre-1973 books everywhere</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1928182187943149755">Twitter</a></p>
 </p>
@@ -470,8 +497,8 @@ They retain the imprints of an old Faustian ideological aether that has given aw
 </div>
 </div>
 <div id="outline-container-orgf03929c" class="outline-3">
-<h3 id="orgf03929c"><span class="section-number-3">4.2.</span> Teach the Arthaśāstra</h3>
-<div class="outline-text-3" id="text-4-2">
+<h3 id="orgf03929c"><span class="section-number-3">5.2.</span> Teach the Arthaśāstra</h3>
+<div class="outline-text-3" id="text-5-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1782982799487533525">Twitter</a></p>
 </p>
@@ -491,8 +518,8 @@ Just to be clear, by &ldquo;Vedas are too archaic&rdquo;, I mean their cultural 
 </div>
 </div>
 <div id="outline-container-org3dcd2a0" class="outline-2">
-<h2 id="org3dcd2a0"><span class="section-number-2">5.</span> High-speed rail map</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org3dcd2a0"><span class="section-number-2">6.</span> High-speed rail map</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1798558608894087590">Twitter</a></p>
 </p>
@@ -535,8 +562,8 @@ And here&rsquo;s an interactive version, made with xatra: <a href="https://srajm
 </div>
 </div>
 <div id="outline-container-orgf42de29" class="outline-2">
-<h2 id="orgf42de29"><span class="section-number-2">6.</span> Media code</h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="orgf42de29"><span class="section-number-2">7.</span> Media code</h2>
+<div class="outline-text-2" id="text-7">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1712203675123216387">Twitter</a></p>
 </p>
@@ -563,8 +590,8 @@ Alcohol bad. I don&rsquo;t care if Europeans find it &ldquo;normal&rdquo;. Other
 </div>
 </div>
 <div id="outline-container-org60cc97b" class="outline-2">
-<h2 id="org60cc97b"><span class="section-number-2">7.</span> My genius plan to replace reservations</h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org60cc97b"><span class="section-number-2">8.</span> My genius plan to replace reservations</h2>
+<div class="outline-text-2" id="text-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1778046833421385821">Twitter</a></p>
 </p>
@@ -607,8 +634,8 @@ Uproar from Dalit leaders (state agents), protests orchestrated, case reaches SC
 </div>
 </div>
 <div id="outline-container-org5af1c4b" class="outline-2">
-<h2 id="org5af1c4b"><span class="section-number-2">8.</span> Climate control</h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="org5af1c4b"><span class="section-number-2">9.</span> Climate control</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1774451946599940314">Twitter</a></p>
 </p>
@@ -666,7 +693,7 @@ You wake up every day to post-rain clarity and deciduous trees covered in dew.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-09 Tue 20:27</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
