--- a/politics/rhetorical-advice/positive-vision.html
+++ b/politics/rhetorical-advice/positive-vision.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Importance of a positive vision, and knowing WHY you believe what you believe ⭐</title>
@@ -308,6 +308,28 @@ The Svayambodha of Capitalism and Hindu sovereignty. Needs to be relentlessly re
 <p>
 *The difference between monkey-balancing and moderating is that moderating just means being silent about radical things, or disavowing if pressed, or disavowing when a, while monkey-balancing means actually randomly jumping on the other side to virtue-signal.
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1967549163979071547">Twitter</a></p>
+</p>
+
+<p>
+One very stupid thing RWs do:
+</p>
+
+<p>
+when criticizing people from Enemy Ideologies, they&rsquo;ll say &ldquo;this person is pretending to be a liberal&rdquo; &ldquo;real communists vs fake Indian communists&rdquo; &ldquo;pseudo-secularism/feminism&rdquo; as though the real ideology is actually great
+</p>
+
+<p>
+but when criticizing internal bhōsaḍpillers they&rsquo;ll attack the ideology itself, say &ldquo;extreme libertarianism is not suitable for India we need regulations&rdquo; or &ldquo;trads are like Hindu taliban&rdquo;
+</p>
+
+<p>
+It should be the opposite:
+when attacking enemy ideologies, attack the ideology itself
+when attacking internal retards, call them &ldquo;libertarian-LARPers&rdquo; and &ldquo;trad-LARPers&rdquo; (which is what they are)
+</p>
 </div>
 </div>
 <div id="outline-container-orgdc8f630" class="outline-2">
@@ -389,7 +411,7 @@ There&rsquo;s indeed a ton of &ldquo;neglected&rdquo; Indian history, but anythi
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
