--- a/politics/nirnaya-pill/hoejabi.html
+++ b/politics/nirnaya-pill/hoejabi.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Muslim supremacy is orthogonal to Muslim traditionalism (Hoejabis are the real threat) ⭐</title>
@@ -283,12 +283,16 @@ But why would that be relevant to us? Our cause is to make them not murder us, n
 <p>
 &ldquo;obviously not an Islamist&rdquo;
 </p>
+
+<p>
+<img src="/img/charts/religion_scatter.png" alt="religion_scatter.png" />
+</p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
