--- a/politics/rhetorical-advice/misc.html
+++ b/politics/rhetorical-advice/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-09-11 Thu 03:12 -->
+<!-- 2025-09-20 Sat 15:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc advice on rhetoric and arguing ⭐</title>
@@ -205,32 +205,37 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgabe6449">1. Your implicit assumptions are what people will believe ⭐</a></li>
+<li><a href="#orgabe6449">1. Your implicit assumptions are what people will believe ⭐</a>
+<ul>
+<li><a href="#orge494a71">1.1. but if you want to subvert &#x2026;</a></li>
+</ul>
+</li>
 <li><a href="#orgcd3190c">2. Be explicit in your propaganda ⭐</a></li>
-<li><a href="#org7cc310c">3. Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral</a></li>
-<li><a href="#orgf7925c7">4. Truth-telling is good ⭐</a>
+<li><a href="#orgb2b1295">3. Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral ⭐</a></li>
+<li><a href="#orgbb884a3">4. Why the left incessantly agenda-peddles and &ldquo;politicizes everything&rdquo;, and you should too</a></li>
+<li><a href="#orgf7925c7">5. Truth-telling is good ⭐</a>
 <ul>
-<li><a href="#org1b9ba2a">4.1. bangladeshi</a></li>
-<li><a href="#org0380d79">4.2. general</a></li>
-<li><a href="#org9687409">4.3. negative-sum discourse</a></li>
+<li><a href="#org1b9ba2a">5.1. bangladeshi</a></li>
+<li><a href="#org0380d79">5.2. general</a></li>
+<li><a href="#org9687409">5.3. negative-sum discourse</a></li>
 </ul>
 </li>
-<li><a href="#orgf3eabf4">5. Doing propaganda against an enemy religion</a></li>
-<li><a href="#org1b9c2ad">6. Bullying</a></li>
-<li><a href="#org8e6da55">7. HC (Human Capital/Hot-Crazy) scale for political soldiers</a></li>
-<li><a href="#org63275eb">8. Potency</a>
+<li><a href="#orgf3eabf4">6. Doing propaganda against an enemy religion</a></li>
+<li><a href="#org1b9c2ad">7. Bullying</a></li>
+<li><a href="#org8e6da55">8. HC (Human Capital/Hot-Crazy) scale for political soldiers</a></li>
+<li><a href="#org63275eb">9. Potency</a>
 <ul>
-<li><a href="#orgc3a0a03">8.1. Meta-advice</a></li>
+<li><a href="#orgc3a0a03">9.1. Meta-advice</a></li>
 </ul>
 </li>
-<li><a href="#orge9d32b7">9. Priorities</a></li>
-<li><a href="#org87c9bd9">10. Debate in modern times is never good-faith</a></li>
-<li><a href="#org33ba0f2">11. The correct engagement with US politics</a>
+<li><a href="#orge9d32b7">10. Priorities</a></li>
+<li><a href="#org87c9bd9">11. Debate in modern times is never good-faith</a></li>
+<li><a href="#org33ba0f2">12. The correct engagement with US politics</a>
 <ul>
-<li><a href="#org21021bd">11.1. mudfighting with wignats</a></li>
+<li><a href="#org21021bd">12.1. mudfighting with wignats</a></li>
 </ul>
 </li>
-<li><a href="#org12c19ef">12. Virtue</a></li>
+<li><a href="#org12c19ef">13. Virtue</a></li>
 </ul>
 </div>
 </div>
@@ -260,7 +265,10 @@ Do you see what&rsquo;s going on?
 <p>
 The whole Javed Akhtar &ldquo;debate&rdquo; is an example of leftist kayfabe. The point of it is to have both sides accept a common premise that &ldquo;Muslims are oppressed&rdquo;, so as to reinforce that consensus.
 </p>
-
+</div>
+<div id="outline-container-orge494a71" class="outline-3">
+<h3 id="orge494a71"><span class="section-number-3">1.1.</span> but if you want to subvert &#x2026;</h3>
+<div class="outline-text-3" id="text-1-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1965840058365202614">Twitter</a></p>
 </p>
@@ -270,12 +278,13 @@ The way to think of it is: assuming leftist frameworks in your argument generate
 </p>
 
 <p>
-The one correct way to do it is to cite things that are in your enemy&rsquo;s frameworks but not fundamental to them, but actually are important to you. Think e.g. Buddha citing non-fundamental things in H literature to accuse Brāhmaṇas of hypocrisy, e.g. &ldquo;Brāhmaṇas should not take usury, but they do!&rdquo;
+The one correct way to do it is to cite things that are in your enemy&rsquo;s frameworks but not fundamental to them, but actually are important to you. Think e.g. Buddha citing non-fundamental things in H literature to accuse Brāhmaṇas of hypocrisy, e.g. &ldquo;Brāhmaṇas should not take usury, but they do!&rdquo; or Indira Gandhi adopting Hindu aesthetics in her campaign and LARPing as a goddess.
 </p>
 
 <p>
 Similarly it is good to attack Muslim supremacy or frame Left-liberalism as a colonial empire, because these actually are problems, and the left really doesn&rsquo;t want to apply those principles in these cases.
 </p>
+</div>
 </div>
 </div>
 <div id="outline-container-orgcd3190c" class="outline-2">
@@ -320,8 +329,8 @@ This is not 1980s Britain. This is the land of emotionally incontinent reel-addi
 </p>
 </div>
 </div>
-<div id="outline-container-org7cc310c" class="outline-2">
-<h2 id="org7cc310c"><span class="section-number-2">3.</span> Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral</h2>
+<div id="outline-container-orgb2b1295" class="outline-2">
+<h2 id="orgb2b1295"><span class="section-number-2">3.</span> Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral ⭐</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956926962124951865">Twitter</a></p>
@@ -345,13 +354,33 @@ The trick is to pick an irrelevant crazy-sounding person/claim on your side with
 </p>
 </div>
 </div>
-<div id="outline-container-orgf7925c7" class="outline-2">
-<h2 id="orgf7925c7"><span class="section-number-2">4.</span> Truth-telling is good ⭐</h2>
+<div id="outline-container-orgbb884a3" class="outline-2">
+<h2 id="orgbb884a3"><span class="section-number-2">4.</span> Why the left incessantly agenda-peddles and &ldquo;politicizes everything&rdquo;, and you should too</h2>
 <div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1966133249190580265">Twitter</a></p>
+</p>
+
+<p>
+While incessantly reiterating one&rsquo;s core points at every opportunity makes one insufferably annoying as an individual,  but is very valuable for your <b>side</b>, because it gets people to implicitly think &ldquo;he&rsquo;s right, just annoying&rdquo;.
+</p>
+
+<p>
+Ahaṃkāra-filled RWs are unwilling to sacrifice personal clout for the greater cause, so they prefer to do cloutmaxxing, epic-pwning and ched-LARPing—to the point that even BJP state handles want to do this, like the Assam handle below.
+</p>
+
+<p>
+We should worship and adore those who do make the sacrifice (e.g. the BJP WB handle, or BOOMER SHERs like the Pradeep Gupta guy I just RTed) to compensate for the personal clout lost.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf7925c7" class="outline-2">
+<h2 id="orgf7925c7"><span class="section-number-2">5.</span> Truth-telling is good ⭐</h2>
+<div class="outline-text-2" id="text-5">
 </div>
 <div id="outline-container-org1b9ba2a" class="outline-3">
-<h3 id="org1b9ba2a"><span class="section-number-3">4.1.</span> bangladeshi</h3>
-<div class="outline-text-3" id="text-4-1">
+<h3 id="org1b9ba2a"><span class="section-number-3">5.1.</span> bangladeshi</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1933118191968161933">Twitter</a></p>
 This is a problem.
@@ -363,8 +392,8 @@ We need to create a consensus (both locally and abroad) about the atrocities in 
 </div>
 </div>
 <div id="outline-container-org0380d79" class="outline-3">
-<h3 id="org0380d79"><span class="section-number-3">4.2.</span> general</h3>
-<div class="outline-text-3" id="text-4-2">
+<h3 id="org0380d79"><span class="section-number-3">5.2.</span> general</h3>
+<div class="outline-text-3" id="text-5-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1933125553399448041">Twitter</a></p>
 </p>
@@ -383,8 +412,8 @@ In building institutions, everything is a repeated game.
 </div>
 </div>
 <div id="outline-container-org9687409" class="outline-3">
-<h3 id="org9687409"><span class="section-number-3">4.3.</span> negative-sum discourse</h3>
-<div class="outline-text-3" id="text-4-3">
+<h3 id="org9687409"><span class="section-number-3">5.3.</span> negative-sum discourse</h3>
+<div class="outline-text-3" id="text-5-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1943952401180111044">Twitter</a></p>
 All discourse between adversaries is misinformation on net by its nature, just like war is -ve-sum. Debate kills Truth like War kills Wealth. Nonetheless we must do it.
@@ -401,8 +430,8 @@ But that doesn&rsquo;t mean letting Libs coronate themselves with the authority 
 </div>
 </div>
 <div id="outline-container-orgf3eabf4" class="outline-2">
-<h2 id="orgf3eabf4"><span class="section-number-2">5.</span> Doing propaganda against an enemy religion</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="orgf3eabf4"><span class="section-number-2">6.</span> Doing propaganda against an enemy religion</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1793230956289040586">Twitter</a></p>
 </p>
@@ -465,8 +494,8 @@ Also OT but the use of the &ldquo;kheti&rdquo; quote as an own is embarrassing, 
 </div>
 </div>
 <div id="outline-container-org1b9c2ad" class="outline-2">
-<h2 id="org1b9c2ad"><span class="section-number-2">6.</span> Bullying</h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="org1b9c2ad"><span class="section-number-2">7.</span> Bullying</h2>
+<div class="outline-text-2" id="text-7">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1931929027469611244">Twitter</a></p>
 </p>
@@ -481,8 +510,8 @@ Libs bully too, but for specific political/cultural goals—they bully their ene
 </div>
 </div>
 <div id="outline-container-org8e6da55" class="outline-2">
-<h2 id="org8e6da55"><span class="section-number-2">7.</span> HC (Human Capital/Hot-Crazy) scale for political soldiers</h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org8e6da55"><span class="section-number-2">8.</span> HC (Human Capital/Hot-Crazy) scale for political soldiers</h2>
+<div class="outline-text-2" id="text-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1935566400879477238">Twitter</a></p>
 </p>
@@ -513,8 +542,8 @@ One who is far from the frontier should not be elevated or rewarded. One who bre
 </div>
 </div>
 <div id="outline-container-org63275eb" class="outline-2">
-<h2 id="org63275eb"><span class="section-number-2">8.</span> Potency</h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="org63275eb"><span class="section-number-2">9.</span> Potency</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926101661325422662">Twitter</a></p>
 </p>
@@ -530,8 +559,8 @@ Also people who are unstable characters swinging wildly from one issue to anothe
 </p>
 </div>
 <div id="outline-container-orgc3a0a03" class="outline-3">
-<h3 id="orgc3a0a03"><span class="section-number-3">8.1.</span> Meta-advice</h3>
-<div class="outline-text-3" id="text-8-1">
+<h3 id="orgc3a0a03"><span class="section-number-3">9.1.</span> Meta-advice</h3>
+<div class="outline-text-3" id="text-9-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926113645357867217">Twitter</a></p>
 </p>
@@ -555,8 +584,8 @@ Must do opposite.
 </div>
 </div>
 <div id="outline-container-orge9d32b7" class="outline-2">
-<h2 id="orge9d32b7"><span class="section-number-2">9.</span> Priorities</h2>
-<div class="outline-text-2" id="text-9">
+<h2 id="orge9d32b7"><span class="section-number-2">10.</span> Priorities</h2>
+<div class="outline-text-2" id="text-10">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1911986085301027045">Twitter</a></p>
 </p>
@@ -573,8 +602,8 @@ The most important points to hammer in to the in-group  right now are:
 </div>
 </div>
 <div id="outline-container-org87c9bd9" class="outline-2">
-<h2 id="org87c9bd9"><span class="section-number-2">10.</span> Debate in modern times is never good-faith</h2>
-<div class="outline-text-2" id="text-10">
+<h2 id="org87c9bd9"><span class="section-number-2">11.</span> Debate in modern times is never good-faith</h2>
+<div class="outline-text-2" id="text-11">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951490445537861904">Twitter</a></p>
 </p>
@@ -619,8 +648,8 @@ In antiquity, this guy would be challenging all proponents of his rival ideology
 </div>
 </div>
 <div id="outline-container-org33ba0f2" class="outline-2">
-<h2 id="org33ba0f2"><span class="section-number-2">11.</span> The correct engagement with US politics</h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="org33ba0f2"><span class="section-number-2">12.</span> The correct engagement with US politics</h2>
+<div class="outline-text-2" id="text-12">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1871171995401867276">Twitter</a></p>
 </p>
@@ -658,8 +687,8 @@ Most Indian RWs do the exact opposite:
 </ul>
 </div>
 <div id="outline-container-org21021bd" class="outline-3">
-<h3 id="org21021bd"><span class="section-number-3">11.1.</span> mudfighting with wignats</h3>
-<div class="outline-text-3" id="text-11-1">
+<h3 id="org21021bd"><span class="section-number-3">12.1.</span> mudfighting with wignats</h3>
+<div class="outline-text-3" id="text-12-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938732060874809416">Twitter</a></p>
 </p>
@@ -681,8 +710,8 @@ rather than seething at mainstream MAGA/whites themselves.
 </div>
 </div>
 <div id="outline-container-org12c19ef" class="outline-2">
-<h2 id="org12c19ef"><span class="section-number-2">12.</span> Virtue</h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="org12c19ef"><span class="section-number-2">13.</span> Virtue</h2>
+<div class="outline-text-2" id="text-13">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951831997506277506">Twitter</a></p>
 </p>
@@ -699,7 +728,7 @@ What is necessary is a calculated willingness to sacrifice virtues for a greater
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-09-11 Thu 03:12</p>
+<p class="date">Created: 2025-09-20 Sat 15:27</p>
 </div>
 </body>
 </html>
