--- a/404.html
+++ b/404.html
@@ -14,6 +14,40 @@
                 window.location.href = "https://srajma.substack.com";
             } else if (path === "/x" || path === "/x/") { // Modified for /x and /x/
                 window.location.href = "https://x.com/real_mahalingam/status/1825165727684321361";
+            } else if (path === "/xatra" || path === "/xatra/") {
+                window.location.href = "https://srajma.github.io/maps";
+            } else if (path === "/xatra/examples/nations/INDIC" || path === "/xatra/examples/nations/INDIC.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_india";
+            } else if (path === "/xatra/examples/nations/INDOSPHERE" || path === "/xatra/examples/nations/INDOSPHERE.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
+            } else if (path === "/xatra/examples/nations/SILKRD" || path === "/xatra/examples/nations/SILKRD.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
+            } else if (path === "/xatra/examples/nations/SEA_GREATER" || path === "/xatra/examples/nations/SEA_GREATER.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
+            } else if (path === "/xatra/examples/mandala/MANDALA" || path === "/xatra/examples/mandala/MANDALA.html") {
+                window.location.href = "https://srajma.github.io/maps/akhand";
+            } else if (path === "/xatra/examples/colonies/SEA_ROUTES" || path === "/xatra/examples/colonies/SEA_ROUTES.html") {
+                window.location.href = "https://srajma.github.io/maps/sea";
+            } else if (path === "/xatra/examples/colonies/EARLY_SUVARNABHUMI" || path === "/xatra/examples/colonies/EARLY_SUVARNABHUMI.html") {
+                window.location.href = "https://srajma.github.io/maps/suvarnabhumi";
+            } else if (path === "/xatra/examples/hsr" || path === "/xatra/examples/hsr.html") {
+                window.location.href = "https://srajma.github.io/maps/hsr";
+            } else if (path === "/xatra/examples/rdviz/INDIAN_SUBCONTINENT" || path === "/xatra/examples/rdviz/INDIAN_SUBCONTINENT.html") {
+                window.location.href = "https://srajma.github.io/maps/admin_india_2";
+            } else if (path === "/xatra/examples/rdviz/SILKRD" || path === "/xatra/examples/rdviz/SILKRD.html") {
+                window.location.href = "https://srajma.github.io/maps";
+            } else if (path === "/xatra/examples/rdviz/SEA" || path === "/xatra/examples/rdviz/SEA.html") {
+                window.location.href = "https://srajma.github.io/maps";
+            } else if (path === "/xatra/examples/rdviz/WORLD" || path === "/xatra/examples/rdviz/WORLD.html") {
+                window.location.href = "https://srajma.github.io/maps";
+            } else if (path === "/xatra/examples/matchers/INDIC" || path === "/xatra/examples/matchers/INDIC.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_india";
+            } else if (path === "/xatra/examples/matchers/INDOSPHERE" || path === "/xatra/examples/matchers/INDOSPHERE.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
+            } else if (path === "/xatra/examples/matchers/SEA" || path === "/xatra/examples/matchers/SEA.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
+            } else if (path === "/xatra/examples/matchers/SILKRD" || path === "/xatra/examples/matchers/SILKRD.html") {
+                window.location.href = "https://srajma.github.io/maps/nations_indosphere";
             } else {
                 document.body.innerHTML = '<p>This page could not be found, and neither will your body. Your IP address has been recorded the priest-king has been notified. <a href="/">Go to homepage</a></p>';
             }
